# riki

./: Cargo.toml  README.md
.quicknote/3a52ce780950d4d969792a2559cd519d7ee8c727/: riki_features.md
src/: add.rs  cli.rs  config.rs  delete.rs  edit.rs  main.rs  search.rs  ui.rs  view.rs  wiki.rs
src/cli/: add_wiki.rs  backlinks..rs  backlinks.rs  delete_page.rs  edit_page.rs  export_pages.rs  graph.rs  history.rs  import_pages.rs  list_pages.rs  main_menu.rs  mod.rs  new_page.rs  revert_page.rs  search.rs  tags.rs  templates.rs
src/wiki/: backlinks.rs  export.rs  graph.rs  history.rs  import.rs  mod.rs  page.rs  search.rs  tags.rs  templates.rs  utils.rs
templates/: api-doc.md  architecture-diagram.md  book-notes.md  code-snippet.md  concept.md  interview-prep.md  problem-solution.md  project-idea.md  shell-command.md  tech-comparison.md  tool-doc.md  troubleshooting.md  vulnerability.md
