[package]
name = "riki"
version = "0.1.0"
authors = ["Thomas Leon Highbaugh <me@thomasleonhighbaugh.ne>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.16"
crossterm = "0.25"
termion = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }
